trying to fix too big margins

--- a/frontend/src/components/Index.css
+++ b/frontend/src/components/Index.css
@@ -62,6 +62,14 @@
     cursor: pointer; 
 }
 
+#no-margin li{
+    margin: 0;
+}
+
+ul li {
+    margin: 0; 
+}
+
 /* Phone */  
 @media (max-width: 600px) {
     #text {
